2012-01-02 Harri Pitkänen <hatapitk@iki.fi>
	* Avoid double delete of component objects.

2011-02-17 Tarja Lindfors <tarja@puimula.org>

	* New icon.

2011-02-16 Harri Pitkänen <hatapitk@iki.fi>

	* Specify English as the fallback language for settings dialog.

2011-02-05 Harri Pitkänen <hatapitk@iki.fi>

	* Rename source package to libreoffice-voikko.
	* Add new codes to language mapping table.
	* Remove -Werror from compiler flags, STLPort (used on 32 bit Linux)
	  headers contain code that triggers warnings with recent GCC.

2011-02-01 Harri Pitkänen <hatapitk@iki.fi>

	* Remove %origin% expansion trick from configuration, it has been unused
	  since version 3.0.
	* Document that the extension now targets primarily LibreOffice.

2010-12-22 Harri Pitkänen <hatapitk@iki.fi>

	* Add support for spell checking multiple languages.

2010-07-27 David Tardon

	* Fix broken config.xcu to work with stricter validation in OOo 3.3.

2010-05-31 Harri Pitkänen <hatapitk@iki.fi>

	* Switch to new libvoikko 3.0 API (Trac #11).
	* Ignoring grammar checker rules works (Trac #12).

2010-05-07 Harri Pitkänen <hatapitk@iki.fi>

	* Add license attribute that allows suppressing the license dialog with
	  unopkg --suppress-license.

2010-04-23 Harri Pitkänen <hatapitk@iki.fi>

	* Remove references to malaga and glib libraries for Windows and OS X.
	* Increase version number to 3.1.1.

2010-01-05 Harri Pitkänen <hatapitk@iki.fi>

	* Fix error handling for cases where configuration is somehow damaged.
	  Partially fixes SF.net bug #2919454.

2009-10-26 Harri Pitkänen <hatapitk@iki.fi>

	* Reduce scope of a variable to fix cppcheck warning.

2009-10-04 Harri Pitkänen <hatapitk@iki.fi>

	* Re-enable grammar checker on Windows, since it works when libvoikko
	  has been built with MSVC.
	* Document the fact that MSVC should be used for building libvoikko on
	  Windows. Change the build system so that libvoikko-1.def -> libvoikko-1.lib